# zer_mq_client_server

./: CMakeLists.txt  README.md  test.py  zmq_client.c  zmq_server.c  zmq_version.c
